# rptodo-project

./: README.md  pyproject.toml
rptodo/: __init__.py  cli.py  config.py  database.py  rptodo.py
tests/: test_rptodo.py
