[tool.poetry]
name = "rptodo"
version = "0.1.0"
description = ""
authors = ["Hrvoje Ruhek <trulija@gmail.com>"]

[tool.poetry.scripts]
rptodo = "rptodo.cli:app"

[tool.poetry.dependencies]
python = "^3.8"
typer = "0.3.2"
colorama = "0.4.4"
shellingham = "1.4.0"

[tool.poetry.dev-dependencies]
pytest = "6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
